docs/api/qiskit/0.24/qiskit.providers.aer.extensions.SnapshotProbabilities.mdx
---
title: SnapshotProbabilities
description: API reference for qiskit.providers.aer.extensions.SnapshotProbabilities
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotProbabilities
---

<span id="qiskit-providers-aer-extensions-snapshotprobabilities" />

# qiskit.providers.aer.extensions.SnapshotProbabilities

<Class id="qiskit.providers.aer.extensions.SnapshotProbabilities" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.7/qiskit/providers/aer/extensions/snapshot_probabilities.py" signature="SnapshotProbabilities(label, num_qubits, variance=False)" modifiers="class">
  Snapshot instruction for all methods of Qasm simulator.

  Create a probability snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **num\_qubits** (*int*) – the number of qubits to snapshot.
  *   **variance** (*bool*) – compute variance of probabilities \[Default: False]

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  ### \_\_init\_\_

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.__init__" signature="__init__(label, num_qubits, variance=False)">
    Create a probability snapshot instruction.

    **Parameters**

    *   **label** (*str*) – the snapshot label.
    *   **num\_qubits** (*int*) – the number of qubits to snapshot.
    *   **variance** (*bool*) – compute variance of probabilities \[Default: False]

    **Raises**

    **ExtensionError** – if snapshot is invalid.
  </Function>

  ## Methods

  |                                                                                                                                                                                                                      |                                                                          |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.providers.aer.extensions.SnapshotProbabilities.__init__ "qiskit.providers.aer.extensions.SnapshotProbabilities.__init__")(label, num\_qubits\[, variance])                                      | Create a probability snapshot instruction.                               |
  | [`add_decomposition`](#qiskit.providers.aer.extensions.SnapshotProbabilities.add_decomposition "qiskit.providers.aer.extensions.SnapshotProbabilities.add_decomposition")(decomposition)                             | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.providers.aer.extensions.SnapshotProbabilities.assemble "qiskit.providers.aer.extensions.SnapshotProbabilities.assemble")()                                                                     | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.providers.aer.extensions.SnapshotProbabilities.broadcast_arguments "qiskit.providers.aer.extensions.SnapshotProbabilities.broadcast_arguments")(qargs, cargs)                        | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.providers.aer.extensions.SnapshotProbabilities.c_if "qiskit.providers.aer.extensions.SnapshotProbabilities.c_if")(classical, val)                                                                   | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.providers.aer.extensions.SnapshotProbabilities.copy "qiskit.providers.aer.extensions.SnapshotProbabilities.copy")(\[name])                                                                          | Copy of the instruction.                                                 |
  | [`define_snapshot_register`](#qiskit.providers.aer.extensions.SnapshotProbabilities.define_snapshot_register "qiskit.providers.aer.extensions.SnapshotProbabilities.define_snapshot_register")(circuit\[, label, …]) | Defines qubits to snapshot for all snapshot methods                      |
  | [`inverse`](#qiskit.providers.aer.extensions.SnapshotProbabilities.inverse "qiskit.providers.aer.extensions.SnapshotProbabilities.inverse")()                                                                        | Special case.                                                            |
  | [`is_parameterized`](#qiskit.providers.aer.extensions.SnapshotProbabilities.is_parameterized "qiskit.providers.aer.extensions.SnapshotProbabilities.is_parameterized")()                                             | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.providers.aer.extensions.SnapshotProbabilities.mirror "qiskit.providers.aer.extensions.SnapshotProbabilities.mirror")()                                                                           | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.providers.aer.extensions.SnapshotProbabilities.qasm "qiskit.providers.aer.extensions.SnapshotProbabilities.qasm")()                                                                                 | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.providers.aer.extensions.SnapshotProbabilities.repeat "qiskit.providers.aer.extensions.SnapshotProbabilities.repeat")(n)                                                                          | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.providers.aer.extensions.SnapshotProbabilities.reverse_ops "qiskit.providers.aer.extensions.SnapshotProbabilities.reverse_ops")()                                                            | For a composite instruction, reverse the order of sub-instructions.      |
  | [`validate_parameter`](#qiskit.providers.aer.extensions.SnapshotProbabilities.validate_parameter "qiskit.providers.aer.extensions.SnapshotProbabilities.validate_parameter")(parameter)                              | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                                                                                  |                                                                               |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.providers.aer.extensions.SnapshotProbabilities.decompositions "qiskit.providers.aer.extensions.SnapshotProbabilities.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.providers.aer.extensions.SnapshotProbabilities.definition "qiskit.providers.aer.extensions.SnapshotProbabilities.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.providers.aer.extensions.SnapshotProbabilities.duration "qiskit.providers.aer.extensions.SnapshotProbabilities.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.providers.aer.extensions.SnapshotProbabilities.label "qiskit.providers.aer.extensions.SnapshotProbabilities.label")                            | Return snapshot label                                                         |
  | [`params`](#qiskit.providers.aer.extensions.SnapshotProbabilities.params "qiskit.providers.aer.extensions.SnapshotProbabilities.params")                         | return instruction params.                                                    |
  | [`snapshot_type`](#qiskit.providers.aer.extensions.SnapshotProbabilities.snapshot_type "qiskit.providers.aer.extensions.SnapshotProbabilities.snapshot_type")    | Return snapshot type                                                          |
  | [`unit`](#qiskit.providers.aer.extensions.SnapshotProbabilities.unit "qiskit.providers.aer.extensions.SnapshotProbabilities.unit")                               | Get the time unit of duration.                                                |

  ## Members list

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.assemble" signature="assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.define_snapshot_register" signature="define_snapshot_register(circuit, label=None, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.duration">
    Get the duration.
  </Attribute>

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.label">
    Return snapshot label
  </Attribute>

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.params">
    return instruction params.
  </Attribute>

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.snapshot_type">
    Return snapshot type
  </Attribute>

  ### unit

  <Attribute id="qiskit.providers.aer.extensions.SnapshotProbabilities.unit">
    Get the time unit of duration.
  </Attribute>

  ### validate\_parameter

  <Function id="qiskit.providers.aer.extensions.SnapshotProbabilities.validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

